--- a/content/04-core-concepts/08-cardano-keys.mdx
+++ b/content/04-core-concepts/08-cardano-keys.mdx
@@ -8,6 +8,10 @@ Keys are asymmetric cryptography key pairs used for:
 - Signing and validating payments and staking certificates
 - Identifying and defining addresses on the Cardano blockchain
 
+This schematic illustrates the relationship between keys, addresses, and certificates:
+
+![keys-certificates](keys-certificates.png)
+
 ## Types of keys
 In Cardano, there are two main key types:
 
