--- a/content/04-core-concepts/02-cardano-node.mdx
+++ b/content/04-core-concepts/02-cardano-node.mdx
@@ -13,8 +13,8 @@ are participating in and contributing to the network.
 
 This [cardano-node](https://github.com/input-output-hk/cardano-node) is the top
 level component for the node and aggregates a number of other components from
-other packages: consensus, ledger and networking, configuration, CLI, as well as
+other packages: consensus, ledger and networking, configuration, command line interface (CLI), as well as
 logging and monitoring. Note that cardano-node no longer incorporates wallet or
-explorer functionality. The wallet backend and explorer backend are separate
+explorer functionality. The wallet backend (WBE) and explorer backend are separate
 components that run in separate external processes that communicate with the
-node via local IPC.
+node via local Inter-Process Communication (IPC).
