--- a/content/03-new-to-cardano/05-cardano-nodes.mdx
+++ b/content/03-new-to-cardano/05-cardano-nodes.mdx
@@ -34,7 +34,7 @@ of other blocks following it), or to insert a new block into the chain without
 alerting all the network participants. This ensures the integrity and
 transparency of the blockchain expansion.
 
-**Slots and epochs**
+<a name="slots_and_epochs"></a>**Slots and epochs**
 
 The Cardano blockchain uses the Ouroboros Praos protocol to facilitate consensus
 on the chain. Ouroboros Praos divides time into epochs. Each Cardano epoch
@@ -45,19 +45,19 @@ node is expected to be nominated every 20 seconds, for a total of 21,600
 nominations per epoch. If randomly elected slot leaders produce blocks, one of
 them will be added to the chain. Other candidate blocks will be discarded.
 
-**Slot leader election**
+<a name="slot_leader_election"></a>**Slot leader election**
 
 The Cardano network consists of a number of stake pools that control the
-aggregated stake of their owners and other delegators, also known as
-stakeholders. Slot leaders are elected randomly from among the stake pools. The
-more stake the pool controls, the greater the chance it has of being elected as
+aggregated stake of their owners and other stakeholders, also known as
+*delegators*. Slot leaders are randomly elected from among the stake pools. The
+more stake a pool controls, the greater the chance it has of being elected as
 a slot leader to produce a new block that is accepted into the blockchain. This
-is the concept of proof-of-stake (PoS).
+is the basic concept of proof of stake (PoS).
 
 **Transaction validation**
 
 When validating a transaction, a slot leader needs to ensure that the sender has
-included enough funds to pay for that transaction and must also ensure that the
+included enough funds to pay for that transaction *and* must also ensure that the
 transaction’s parameters are met. Assuming that the transaction meets all these
 requirements, the slot leader will record it as a part of a new block, which
 will then be connected to other blocks in the chain.
