--- a/content/03-new-to-cardano/05-cardano-nodes.mdx
+++ b/content/03-new-to-cardano/05-cardano-nodes.mdx
@@ -34,7 +34,7 @@ of other blocks following it), or to insert a new block into the chain without
 alerting all the network participants. This ensures the integrity and
 transparency of the blockchain expansion.
 
-<a name="slots_and_epochs"></a>**Slots and epochs**
+**Slots and epochs**
 
 The Cardano blockchain uses the Ouroboros Praos protocol to facilitate consensus
 on the chain. Ouroboros Praos divides time into epochs. Each Cardano epoch
@@ -45,7 +45,7 @@ node is expected to be nominated every 20 seconds, for a total of 21,600
 nominations per epoch. If randomly elected slot leaders produce blocks, one of
 them will be added to the chain. Other candidate blocks will be discarded.
 
-<a name="slot_leader_election"></a>**Slot leader election**
+**Slot leader election**
 
 The Cardano network consists of a number of stake pools that control the
 aggregated stake of their owners and other stakeholders, also known as
