--- a/content/04-core-concepts/06-pledging-and-delegation-options.mdx
+++ b/content/04-core-concepts/06-pledging-and-delegation-options.mdx
@@ -3,11 +3,11 @@ title: Pledging and delegation options
 metaTitle: Pledging and delegation options
 ---
 
-Ada that is held on the Cardano network represents a user’s stake in the
+Ada held on the [Cardano network](https://cardano.org/) represents a user’s stake in the
 protocol, the size of which is proportional to the amount of ada held. Users who
 hold a stake in Cardano can earn passive rewards for validating blocks. The
 amount of rewards they can earn is proportional to the amount of ada they pledge
-or delegate to a stake pool.
+or delegate to a [stake pool](https://docs.cardano.org/core-concepts/stake-pools).
 
 There are three options ada holders can consider for delegating their stake:
 
@@ -20,22 +20,22 @@ To create and register a stake pool, see the
 explaining how to pledge and delegate to earn rewards.
 
 Stake pools must maintain **high-availability**, which means that they should
-always be online and available to validate and create new blocks. The rewards a
-stake pool can earn is directly proportional to the amount of ada that is
+*always* be online and available to validate and create new blocks. The rewards a
+stake pool can earn are directly proportional to the amount of ada that is
 pledged or delegated, and the number of blocks the stake pool can create in a
-given epoch. Ouroboros (the protocol that runs on Cardano) elects the slot
-leader that grants the permissions to validate transactions and create new
+given epoch. [Ouroboros](https://docs.cardano.org/core-concepts/ouroboros-overview)
+elects [the slot leader](https://docs.cardano.org/glossary#slotleader) that grants the permissions to validate transactions and create new
 blocks, based on the above criteria.
 
-> Note: It is strongly recommended to test all stake pool functionality on the
-> testnet prior to any mainnet deployment.
+> Note: It is **strongly recommended** to test all stake pool functionality on the
+> [testnet](https://testnets.cardano.org/en/testnets/cardano/overview/) *prior* to any mainnet deployment.
 
 ### Pledging
 
 The pledge is the amount of ada that the stake pool operator ‘delegates’ to
-their own pool when it is created. This pledge represents the commitment of the
-operator to maintain their pool and support network activity. Making a pledge is
-not required, however, it is recommended to pledge some ada to the stake pool
+their own pool when it is created. This pledge represents the operator's commitment
+to maintain their pool and support network activity. Making a pledge is
+not required, however, it is recommended to pledge *some* ada to the stake pool
 prior to running it. The more ada that is pledged, the higher the pool rewards,
 which are dependent on the pool’s level of uptime and its performance.
 
@@ -47,12 +47,12 @@ which are dependent on the pool’s level of uptime and its performance.
 
 Ada holders who do not have technical expertise in maintaining a stake pool can
 earn rewards by delegating to any stake pool available on the network. The
-Daedalus wallet provides a convenient user-friendly interface that allows users
-to easily start delegating to any registered stake pool.
+[Daedalus wallet](https://docs.cardano.org/cardano-components/daedalus-wallet) provides a user-friendly interface that allows users
+to start delegating to any registered stake pool.
 
-> Note: ada holders and SPOs who pledge or delegate will always have access to
+> Note: ada holders and stake pool operators (SPOs) who pledge or delegate will always have access to
 > their ada. If the delegated ada is spent or removed from the pool, the rewards
-> decrease respectively.
+> decrease accordingly.
 
 > **Related topics:**
 > -   [Registering a stake pool](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/register_stakepool.md)
@@ -65,7 +65,7 @@ to easily start delegating to any registered stake pool.
 ### Rewards
 
 Delegators earn rewards for participating in staking (either pledging or
-delegating) and these rewards are automatically distributed between the
+delegating), and these rewards are automatically distributed between the
 participants according to the rewards scheme. The rewards scheme in Cardano is
 designed to be decentralized, which means that there is no single controlling
 party.
