--- a/content/04-core-concepts/10-about-hard-forks.mdx
+++ b/content/04-core-concepts/10-about-hard-forks.mdx
@@ -3,19 +3,20 @@ title: About hard forks
 metaTitle: About hard forks
 ---
 
-The term _hard fork_ is used to describe a radical change in the blockchain, for
-example, a change from one protocol to another. In most blockchains, a hard fork
-indicates block changes or a change to their interpretation. Traditionally, when
-conducting a hard fork, the current protocol would stop operating, new rules and
-changes would be implemented, and the chain would restart. It is important to
+The term _hard fork_ describes a radical change in the blockchain: a change from
+one protocol to another, for example. In most blockchains, a hard fork
+indicates block changes or a change to their interpretation. 
+
+Traditionally, when conducting a hard fork, the current protocol would stop operating,
+new rules and changes would be implemented, and the chain would restart. It is important to
 note that a hard-forked chain _will be different_ from the previous version and
 that the history of the pre-forked blockchain will no longer be available.
 
-The Cardano blockchain has recently hard forked from a Byron federated model to
+The [Cardano](https://cardano.org/) blockchain hard forked from a Byron federated model to
 a Shelley decentralized one. However, this hard fork was unique. Instead of
 implementing radical changes, we ensured a smooth transition to a new protocol
 while saving the history of the previous blocks. This means that the chain did
-not change radically, instead, it contains Byron blocks, and after a transition
+not change *radically*, instead, it contains Byron blocks, and after a transition
 period, adds Shelley blocks. There was no fundamental restart point that erased
 the history of previous activities.
 
@@ -23,11 +24,11 @@ the history of previous activities.
 
 A combinator is a technical term used to indicate the combination of certain
 processes or things. In the case of Cardano, a hard fork combinator combines
-protocols, thereby enabling the Byron-to-Shelley transition without system
-interruption or restart. It ensures that Byron and Shelley ledgers appear as one
-ledger. Shifting from BFT to Ouroboros Praos does not require all nodes to
+protocols, thereby enabling the [Byron-to-Shelley transition](https://iohk.io/en/blog/posts/2020/04/29/from-byron-to-shelley-part-one-the-testnets/) without system
+interruption or restart. It ensures that Byron and Shelley ledgers appear as *one*
+ledger. Shifting from [Ouroboros BFT](https://eprint.iacr.org/2018/1049.pdf) to [Ouroboros Praos](https://iohk.io/en/research/library/papers/ouroboros-praosan-adaptively-securesemi-synchronous-proof-of-stake-protocol/) does not require all nodes to
 update simultaneously. Instead, nodes can update gradually, in fact, some can
-run Byron blocks, others - Shelley blocks.
+run Byron blocks, while others can run Shelley blocks.
 
 The hard fork combinator is designed to enable the combination of several
 protocols, without having to make significant adjustments. The current Cardano
@@ -50,7 +51,7 @@ Doing so in a single update might have caused a range of complexities, so
 Cardano decided to take a two-stage approach, using the Ouroboros _Byzantine
 Fault Tolerance_ (BFT) protocol as an intermediary.
 
-A shift from Ouroboros Classic to BFT (that happened on February 20, 2020) is
+The shift from Ouroboros Classic to BFT (which happened on February 20, 2020) is
 the only traditional hard fork within the Cardano blockchain. This forking event
 restarted the Byron mainnet to run the BFT protocol and enable a smoother
 transition to Ouroboros Praos without any further chain interruptions. The BFT
@@ -59,25 +60,28 @@ unchanged, and the blockchain would appear as a single entity.
 
 ### Token locking: Shelley protocol upgrade
 
-_Token locking_ is a new feature that is being added to the Shelley protocol to
+_Token locking_ is a new feature being added to the Shelley protocol to
 enable various kinds of smart contract use cases, including creating and
 transacting with multi-asset tokens, as well as establishing support for the
-Voltaire voting mechanism. Token locking is the process of ‘reserving’ a certain
-amount of assets and committing not to dispose of them for a specified period of
-time. This feature is enabled in the _Allegra_ (token locking) upgrade and will
-allow recording of that a specific token is being used for a certain purpose
-during the _Mary_ (multi-asset support) upgrade. The _token_ can represent an
-item that is accounted for by the blockchain ledger, including ada, but soon
-will include other custom token types.
+[Voltaire](https://roadmap.cardano.org/en/voltaire/) voting mechanism. 
 
-**Token locking use cases**
+Token locking is the process of ‘reserving’ a certain amount of assets and 
+committing not to dispose of them for a specified period of time. This feature
+is enabled in the _Allegra_ (token locking) upgrade and will allow recording of
+that a specific token is being used for a certain purpose during the _Mary_ 
+(multi-asset support) upgrade. The _token_ can represent an item that is accounted
+for by the blockchain ledger, including ada, but soon will include other custom token types.
+
+**Token locking: use cases**
 
 Support for token locking is crucial to enable complex deal settlement and funds
-accounting. It can be used in the following scenarios:
+accounting. 
+
+It can be used in the following scenarios:
 
 - **Contractual agreement** - when someone enters into a contractual agreement,
   to sell a property, for instance, it is important to promise that this
-  property will not be sold to another person – only to the person who actually
+  property will not be sold to anyone else – only to the person who actually
   pays the money. In this case, the token can represent the property and the
   ‘promise’ – the actual token locking. If the property is sold to a different
   third party, then the contract becomes void.
@@ -95,9 +99,9 @@ accounting. It can be used in the following scenarios:
 
 ### Mary: multi-asset support
 
-*Mary* is the Shelley protocol upgrade implemented in March 2021. It introduces native token and multi-asset support on Cardano. Mary allows users to create uniquely defined (custom) tokens and carry out transactions with them directly on the Cardano blockchain.
+*Mary* is the Shelley protocol upgrade implemented in March 2021. It introduced native token and multi-asset support on Cardano. Mary allows users to create uniquely defined (custom) tokens and carry out transactions with them directly on the Cardano blockchain.
 
-With Mary upgrade, the ledger’s accounting infrastructure processes not only ada transactions but also transactions that simultaneously carry several asset types. Native support grants distinct advantages for developers as there is no need to create smart contracts to handle custom token creation or transactions. This means that the accounting ledger tracks the ownership and transfer of assets instead, removing extra complexity and potential for manual errors, while ensuring significant cost efficiency.
+With the Mary upgrade, the ledger’s accounting infrastructure processes not only ada transactions but also transactions that simultaneously carry several asset types. Native support grants distinct advantages for developers as there is no need to create smart contracts to handle custom token creation or transactions. Instead, the accounting ledger tracks the ownership and transfer of assets, removing extra complexity and potential for manual errors, while ensuring significant cost efficiency.
 
 Developers, businesses, and applications can create general purpose (fungible) or specialized (non-fungible) tokens to achieve commercial or business objectives. These might include the creation of custom payment tokens or rewards for decentralized applications; stablecoins pegged to other currencies; or unique assets that represent intellectual property. All these assets can then be traded, exchanged, or used as payment for products or services.
 
@@ -107,7 +111,7 @@ Developers, businesses, and applications can create general purpose (fungible) o
     
 ### Alonzo: smart contract support
 
-*Alonzo* is the next protocol upgrade, which marks Goguen development theme. It builds on top of transaction metadata, token locking, and native asset functionality to allow for functional smart contract development.
+*Alonzo* is the next protocol upgrade, as part of the Goguen development theme. It builds on top of transaction metadata, token locking, and native asset functionality to allow for functional smart contract development.
 
 This upgrade introduces a versatile platform opening up opportunities for businesses and developers, by allowing the creation of smart contracts and decentralized applications (DApps) for decentralized finance (DeFi).
 
