--- a/content/08-marlowe/03-marlowe-get-started.mdx
+++ b/content/08-marlowe/03-marlowe-get-started.mdx
@@ -2,7 +2,7 @@
 title: Getting started with the Marlowe Playground
 metaTitle: Getting started with the Marlowe Playground
 ---
-The [Marlowe Playground](https://alpha.marlowe.iohkdev.io/) is the medium for end-to-end financial smart contract development. It provides a means for developers to not only write smart contract code, but to also perform preliminary iterative design using simulations, ability to formally verify, and ability to test smart contracts. These capabilities, paired with a purpose-built DSL for finance ensures that the contracts are easy and straightforward to build, secure, verifiable, and rigorously tested. 
+The [Marlowe Playground](https://play.marlowe-finance.io) is the medium for end-to-end financial smart contract development. It provides a means for developers to not only write smart contract code, but to also perform preliminary iterative design using simulations, ability to formally verify, and ability to test smart contracts. These capabilities, paired with a purpose-built DSL for finance ensures that the contracts are easy and straightforward to build, secure, verifiable, and rigorously tested. 
 
 The playground is available to use so that you can develop, simulate, and test the process of writing smart contracts in a sandbox environment. Its purpose is to encourage all types of developers, even if you don’t have prior Haskell or Javascript experience, to build financial products. Marlowe is in the process of deployment on Cardano, however, the Marlowe Playground already provides an environment, where users can try out its functionality in advance of the full deployment. A set of [tutorials](https://alpha.marlowe.iohkdev.io/doc/marlowe/tutorials/index.html) is available that outlines example contracts and overview information on Marlowe and how contracts should be modelled. 
 
