updating RT View link

--- a/content/06-cardano-components/09-cardano-rtview.mdx
+++ b/content/06-cardano-components/09-cardano-rtview.mdx
@@ -3,7 +3,7 @@ title: Cardano RTView
 metaTitle: Cardano RTView
 ---
 
-[RTView](https://github.com/input-output-hk/cardano-rt-view/blob/master/doc/getting-started/install.md/) is a real time monitoring program that provides visibility on the state of running [Cardano nodes](https://github.com/input-output-hk/cardano-node/). It supports multiple node monitoring, even if the nodes work on different machines. 
+[RTView](https://github.com/input-output-hk/cardano-rt-view#rtview-real-time-watching-for-cardano-nodes) is a real time monitoring program that provides visibility on the state of running [Cardano nodes](https://github.com/input-output-hk/cardano-node/). It supports multiple node monitoring, even if the nodes work on different machines. 
 
 RTView enables developers, testers, and general users who are running nodes that are connected to the real cluster to see what is going on and how the nodes are performing. It gives visibility on: how much memory and CPU is being used, the state of the blockchain, how many blocks have been forged by a particular node, how many transactions have been processed, and so on.
 
