--- a/content/04-core-concepts/12-ouroboros-overview.mdx
+++ b/content/04-core-concepts/12-ouroboros-overview.mdx
@@ -5,22 +5,22 @@ metaTitle: Ouroboros overview
 
 ## Ouroboros
 
-In mythology, Ouroboros (also, *uroboros*) is usually depicted as a snake (or sometimes a dragon) eating its own tail in a closed circle. The word Ouroboros itself derives from Ancient Greek, its literal meaning being 'tail eating' or 'tail devourer.' 
+In mythology, [Ouroboros (also, *uroboros*)](https://en.wikipedia.org/wiki/Ouroboros) is usually depicted as a snake (or sometimes a dragon) eating its own tail in a closed circle. The word *Ouroboros* itself derives from Ancient Greek, its literal meaning being 'tail eating' or 'tail devourer.' 
 
 As a symbol, Ouroboros represents the infinity of time flowing back unto itself, in a never-ending cycle, as if caught in an eternal loop. Ouroboros first appeared in Egypt, in 13th century BC. Later, alchemists adopted Ouroboros into their mystical symbolism.
 
 Throughout the ages, Ouroboros has been interpreted and used in a variety of ways by a plethora of cultures. One of the most common interpretations is that the symbol represents the interconnectedness and infinity of the Universe.
 
-In 2017, Charles Hoskinson adopted Ouroboros to name the proof-of-stake consensus protocol that underlies Cardano. In this context, Ouroboros represents the possibility of infinite and ethical growth and scalability of the blockchain. Ouroboros' central message is the delivery of greater opportunities for the world, and its preservation through much-reduced energy consumption.
+In 2017, [Charles Hoskinson](https://en.wikipedia.org/wiki/Charles_Hoskinson) adopted Ouroboros to name the [proof-of-stake](https://docs.cardano.org/new-to-cardano/proof-of-stake) consensus protocol that underlies Cardano. In this context, Ouroboros represents the possibility of infinite and ethical growth and scalability of the blockchain. Ouroboros' central message is the delivery of greater opportunities for the world, and its preservation through [much-reduced energy consumption](https://iohk.io/en/blog/posts/2021/08/17/why-they-re-calling-cardano-the-green-blockchain/).
 
 
 ### What is Ouroboros
 
-Ouroboros is the consensus protocol for Cardano, the first provably secure proof of stake protocol, and the first blockchain protocol based on peer-reviewed research. 
+[Ouroboros](https://eprint.iacr.org/2016/889.pdf) is the consensus protocol for Cardano, the first provably secure proof-of-stake protocol, and the first blockchain protocol based on peer-reviewed research. 
 
 Combining unique technology and mathematically verified mechanisms (including behavioral psychology and economic philosophy principles), Ouroboros guarantees and supports the security and sustainability of any blockchain implementing it. The result is a protocol with proven security guarantees, and able to facilitate the propagation of global, permissionless networks with minimal energy requirements. Cardano is the first such network.
 
-Ouroboros selects participants -stake pools, in this case- to create new blocks based on the stake they control in the network, and facilitates the creation of distributed, permissionless networks capable of sustainably supporting new markets.
+Ouroboros selects participants [-stake pools](https://docs.cardano.org/getting-started/operating-a-stake-pool/about-stake-pools), in this case- to create new blocks based on the stake they control in the network, and facilitates the creation of distributed, permissionless networks capable of sustainably supporting new markets.
 
 ### Ouroboros implementations
 
