--- a/content/03-new-to-cardano/02-what-is-a-cryptocurrency.mdx
+++ b/content/03-new-to-cardano/02-what-is-a-cryptocurrency.mdx
@@ -22,7 +22,7 @@ obtained from the user's public keys.
 ### Ada is the native currency of Cardano
 
 Each blockchain ledger has its underlying cryptocurrency or native currency. Ada
-is the native, or principal currency on Cardano. This means that ada is the main
+is the native, or principal currency on [Cardano](https://cardano.org/). This means that ada is the main
 payment unit on Cardano; it is accepted as fee-payment, to make deposits, and is
 also the only currency in which rewards are distributed.
 
@@ -35,7 +35,7 @@ Cardano also supports the creation of native tokens ‒ digital assets that are
 created for specific purposes. This means that users, developers, and businesses
 can use the Cardano blockchain to create tokens that represent a footprint of
 value (whether defined by the community, market state, or self-governed entity).
-A token can be fungible (replaced) or non-fungible (unique), and act as a
+A token can be fungible (interchangeable) or non-fungible (unique), and act as a
 payment unit, reward, trading asset, or information holder.
 
 #### Related Topics
