--- a/content/03-new-to-cardano/03-why-use-cardano.mdx
+++ b/content/03-new-to-cardano/03-why-use-cardano.mdx
@@ -3,7 +3,7 @@ title: Why use Cardano?
 metaTitle: Why use Cardano?
 ---
 
-Cardano is an open source proof-of-stake blockchain project that began in 2015
+[Cardano](https://cardano.org/) is an open source [proof-of-stake](https://docs.cardano.org/new-to-cardano/proof-of-stake) blockchain project that began in 2015
 to address existing blockchain challenges in the design and development of
 cryptocurrencies. It aims to provide a more balanced and sustainable ecosystem
 that better accounts for the needs of its users as well as other systems seeking
@@ -77,7 +77,7 @@ To address these needs, Cardano focuses on such core concepts as:
   top-tier conferences and publications in the area of cybersecurity and
   cryptography.
 - **Power consumption** — Cardano is a proof-of-stake blockchain. In contrast to
-  proof-of-work blockchains, Cardano requires much less energy and computational
+  proof-of-work blockchains, [Cardano requires much less energy](https://iohk.io/en/blog/posts/2021/08/17/why-they-re-calling-cardano-the-green-blockchain/) and computational
   power. The Bitcoin network grows through computers doing
   ever-more-energy-intensive computations – proof of work – which is
   unsustainable in the long term. Cambridge University has an online tool that
@@ -121,10 +121,10 @@ stages. Let’s take a closer look at these development themes.
 
 Byron set the foundation for Cardano development allowing users to buy and sell
 ada on a proof-of-stake blockchain network. Initially, the Cardano ledger was
-established as a federated network, where the block production and transaction
+established as a federated network, where block production and transaction
 validation were maintained by Input Output Global (the company that develops
-Cardano technology) and Emurgo (the company that drives Cardano commercial
-adoption) stake pools. Byron saw the delivery of Daedalus and Yoroi wallets, and
+Cardano technology) and [Emurgo](https://emurgo.io/) (the company that drives Cardano commercial
+adoption) stake pools. Byron saw the delivery of [Daedalus](https://docs.cardano.org/cardano-components/daedalus-wallet) and Yoroi wallets, and
 also provided users with a Block Explorer ‒ a tool specifically designed for
 browsing the blockchain.
 
@@ -147,7 +147,7 @@ multi-functional system for decentralized application (DApp) building, smart
 contract support, and custom token issuance. Goguen is a key building block to
 establish a versatile platform to build solutions around such application
 domains as supply chain, track and trace, finance, medical records, identity
-voting, property registration, P2P payments and many others.
+voting, property registration, P2P payments, and many others.
 
 **Basho**
 
