--- a/content/03-new-to-cardano/05-cardano-nodes.mdx
+++ b/content/03-new-to-cardano/05-cardano-nodes.mdx
@@ -3,17 +3,17 @@ title: Cardano nodes
 metaTitle: Cardano nodes
 ---
 
-The _Cardano node_ is the top-level component within the network. Network nodes
+The [_Cardano node_](https://docs.cardano.org/cardano-components/cardano-node) is the top-level component within the network. Network nodes
 connect to each other within the networking layer, which is the driving force
 for delivering information exchange requirements. This includes new block
 diffusion and transaction information for establishing a better data flow.
 Cardano nodes maintain connections with peers that have been chosen via a custom
-peer selection process. By running a Cardano node, you are participating in and
+peer-selection process. By running a Cardano node, you are participating in and
 contributing to the network.
 
 ### How does it work?
 
-_Stake pools_ use the Cardano node to validate how the pool interacts with the
+[_Stake pools_](https://docs.cardano.org/core-concepts/stake-pools) use the Cardano node to validate how the pool interacts with the
 network and are responsible for transaction processing and block production.
 They act as reliable server nodes that hold and maintain the combined stake of
 various stakeholders in a single entity.
@@ -23,7 +23,7 @@ various stakeholders in a single entity.
 The goal of blockchain technology is the production of an
 independently-verifiable and cryptographically-linked chain of records (blocks).
 A network of block producers works to collectively advance the blockchain. A
-consensus protocol provides transparency and decides which candidate blocks
+[consensus](https://docs.cardano.org/core-concepts/consensus-explained) protocol provides transparency and decides which candidate blocks
 should be used to extend the chain.
 
 Submitted valid transactions might be included in any new block. A block is
@@ -36,7 +36,7 @@ transparency of the blockchain expansion.
 
 **Slots and epochs**
 
-The Cardano blockchain uses the Ouroboros Praos protocol to facilitate consensus
+The Cardano blockchain uses the [Ouroboros Praos](https://eprint.iacr.org/2017/573.pdf) protocol to facilitate consensus
 on the chain. Ouroboros Praos divides time into epochs. Each Cardano epoch
 consists of a number of slots, where each slot lasts for one second. A Cardano
 epoch currently includes 432,000 slots (5 days). In any slot, zero or more
