--- a/content/05-explore-cardano/02-cardano-architecture/01-overview.mdx
+++ b/content/05-explore-cardano/02-cardano-architecture/01-overview.mdx
@@ -32,7 +32,7 @@ combinations of components):
 ### Nodes and remote nodes
 
 A blockchain system consists of a set of nodes distributed across a network that
-communicate with each other to achieve consensus about the system’s state.
+communicate with each other to achieve [consensus](https://docs.cardano.org/core-concepts/consensus-explained) about the system’s state.
 
 Nodes are responsible for:
 
@@ -43,7 +43,7 @@ Nodes are responsible for:
 - Producing blocks (some nodes)
 - Providing information about the state of the blockchain to other local clients
 
-You can only trust nodes run by you or your organization. This is why Daedalus
+You can only trust nodes run by you or your organization. This is why [Daedalus](https://docs.cardano.org/cardano-components/daedalus-wallet)
 runs a node in the background.
 
 #### Node process
@@ -164,7 +164,7 @@ Read more about:
 
 Cardano is a third-generation distributed ledger. It is based on Ouroboros, a
 peer-reviewed proof-of-stake (PoS) blockchain consensus algorithm that first
-appeared in the top research conference in cryptology world-wide (the
+appeared in the top research conference in cryptology worldwide (the
 International Association for Cryptologic Research 37th International Cryptology
 CXonference - Crypto 2017).
 
