--- a/content/05-explore-cardano/02-cardano-architecture/02-about-db-sync-and-its-components.mdx
+++ b/content/05-explore-cardano/02-cardano-architecture/02-about-db-sync-and-its-components.mdx
@@ -4,8 +4,8 @@ metaTitle: About Cardano DB Sync and its components
 ---
 
 [Cardano DB Sync](https://github.com/input-output-hk/cardano-db-sync#cardano-db-sync)
-is one of the core components of the Cardano architecture, as it provides a
-convenient way to find and query historical information from the Cardano
+is one of the core components of the [Cardano architecture](https://docs.cardano.org/explore-cardano/cardano-architecture/overview), as it provides a
+convenient way to find and query historical information from the [Cardano](https://cardano.org/)
 blockchain through the use of a Structured Query Language (SQL) relational
 database. Db Sync connects to the local node as a client and synchronizes with
 the on-chain activity. The PostgreSQL database then maps the on-chain
@@ -38,7 +38,7 @@ extended version maintains an `Epoch` table, which the non-extended version will
 also create but _not_ maintain.
 
 The `db-sync-node` is written in a highly modular fashion to allow it to be as
-flexible as possible. It connects to a locally running cardano-node (i.e. the
+flexible as possible. It connects to a locally running cardano-node (i.e., the
 one connected to other nodes in the Cardano network over the internet with
 TCP/IP) using a Unix domain socket. Db-sync-node retrieves blocks, updates its
 internal ledger state, and stores parts of each block in a local PostgreSQL
@@ -96,7 +96,7 @@ for tx submission.
 
 #### Stake Pool Metadata Aggregation Server (SMASH)
 
-The purpose of the Stake Pool Metadata Aggregation Server (SMASH) is to
+The purpose of the [Stake Pool Metadata Aggregation Server (SMASH)](https://docs.cardano.org/cardano-components/smash) is to
 aggregate off-chain metadata that stake pools provide when they register on the
 Cardano blockchain. This metadata includes the name of the stake pool, its
 ticker name, web homepage, and so on.
