--- a/content/05-explore-cardano/02-cardano-architecture/04-working-with-db-sync.mdx
+++ b/content/05-explore-cardano/02-cardano-architecture/04-working-with-db-sync.mdx
@@ -3,7 +3,7 @@ title: Working with Cardano DB Sync
 metaTitle: Working with Cardano DB Sync
 ---
 
-The purpose of this document is to explain how Cardano users can retrieve
+The purpose of this document is to explain how [Cardano](https://cardano.org/) users can retrieve
 blockchain data from the database. Here, we look into the ways of working with
 the PostgreSQL database and explore its various queries.
 
@@ -11,11 +11,11 @@ the PostgreSQL database and explore its various queries.
 
 #### Installation Prerequisites
 
-- PostgreSQL library. This can be installed on Linux using e.g.
+- PostgreSQL library. This can be installed on Linux using e.g.,
   `apt install libpq-dev`.
-- PostgreSQL server. This can be installed on Linux using e.g.
+- PostgreSQL server. This can be installed on Linux using e.g.,
   `apt install postgresql`.
-- Сardano-node package. This provides the core Cardano node functionality and
+- Сardano-node package. This provides the core [Cardano node](https://docs.cardano.org/cardano-components/cardano-node) functionality and
   runs as a passive node.
 - Сardano-db-sync package. This acts as a library for database support and
   connects to the Cardano node.
