new glossary terms

--- a/content/13-glossary.mdx
+++ b/content/13-glossary.mdx
@@ -91,12 +91,17 @@ is recommended for new users to start with.
 decentralized application.
 
 ## DeFi
+
   decentralized finance refers to financial instruments and mechanisms built on the blockchain using smart contracts. Examples include atomic loans, swaps, bonding curves, and escrow.
 
 ## delegation
 
 the process by which ada owners can participate in the network and earn rewards
 by [delegating the stake](https://docs.cardano.org/new-to-cardano/how-to-delegate) associated with their ada holdings to a stake pool.
+
+## DEX
+
+a decentralized exchange that facilitates peer-to-peer (P2P) cryptocurrency transactions.
 
 ## epoch
   a defined group of slots that constitute a period of time.
@@ -166,7 +171,7 @@ the mainnet hold value as opposed to assets on a testnet that do not hold value.
   a domain-specific programming language (DSL) that is built on top of Plutus functionality. [Marlowe](https://docs.cardano.org/marlowe/learn-about-marlowe) can be used for financial purposes. There is a friendly [Marlowe playground](https://docs.cardano.org/marlowe/marlowe-get-started) - an environment where non-technical users can easily execute smart contracts prewriting specific conditions.
   
 ## Marlowe Playground
-  the browser-based sandbox environment for end-to-end financial smart contract development. Its purpose is to encourage all types of developers, even if you don’t have prior Haskell or Javascript experience, to build financial products on Cardano. A [set of tutorials](https://alpha.marlowe.iohkdev.io/doc/marlowe/tutorials/index.html) is available that outlines example contracts and overview information on Marlowe and how contracts should be modelled. 
+  the browser-based sandbox environment for end-to-end financial smart contract development. Its purpose is to encourage all types of developers, even if you don’t have prior Haskell or Javascript experience, to build financial products on Cardano. A [set of tutorials](https://play.marlowe-finance.io/doc/marlowe/tutorials/index.html) is available that outlines example contracts and overview information on Marlowe and how contracts should be modelled. 
   
 ## metadata
 
@@ -180,7 +185,7 @@ status, or intellectual rights.
 the technical infrastructure combining Cardano nodes and their relative
 interactions in one unified system.
 
-## non-fungible token
+## non-fungible token (NFT)
 
 a unique asset that is not interchangeable with any other asset(s). Non-fungible
 assets represent specific information (IP rights for example), and act as one
