--- a/content/06-cardano-components/11-daedalus-wallet.mdx
+++ b/content/06-cardano-components/11-daedalus-wallet.mdx
@@ -7,12 +7,12 @@ import { User } from 'styled-icons/boxicons-regular/User'
 
 ## Overview
 
-Daedalus wallet is a full-node hierarchical deterministic (HD) desktop wallet for the ada currency. Daedalus comes bundled with a full Cardano node, and it stores the entire history of Cardano blockchain and validates all blocks and transactions for fully trustless and autonomous operation. 
+Daedalus wallet is a full-node hierarchical deterministic (HD) desktop wallet for the ada currency. Daedalus comes bundled with a full [Cardano node](https://docs.cardano.org/core-concepts/cardano-node), and it stores the entire history of Cardano blockchain and validates all blocks and transactions for fully trustless and autonomous operation. 
 
 ### Key features
 
 - Easy installation with one-click setup of bundled Cardano node
-- Locally stored wallets and encrypted private keys, not shared with third-party servers
+- Locally stored wallets and encrypted [private keys](https://docs.cardano.org/core-concepts/cardano-keys), not shared with third-party servers
 - Trustless operation with locally running full Cardano node which independently validates full transaction history of the blockchain
 - Supports Cardano network by participating in Cardano protocol
 - Wallet backup and restoration using mnemonics phrases
