--- a/content/06-cardano-components/09-cardano-rtview.mdx
+++ b/content/06-cardano-components/09-cardano-rtview.mdx
@@ -3,16 +3,16 @@ title: Cardano RTView
 metaTitle: Cardano RTView
 ---
 
-[RTView](https://github.com/input-output-hk/cardano-rt-view#rtview-real-time-watching-for-cardano-nodes) is a real time monitoring program that provides visibility on the state of running [Cardano nodes](https://github.com/input-output-hk/cardano-node/). It supports multiple node monitoring, even if the nodes work on different machines. 
+[RTView](https://github.com/input-output-hk/cardano-rt-view#rtview-real-time-watching-for-cardano-nodes) is a real-time monitoring program that provides visibility on the state of running [Cardano nodes](https://github.com/input-output-hk/cardano-node/). It supports multiple node monitoring, even if the nodes work on different machines. 
 
-RTView enables developers, testers, and general users who are running nodes that are connected to the real cluster to see what is going on and how the nodes are performing. It gives visibility on: how much memory and CPU is being used, the state of the blockchain, how many blocks have been forged by a particular node, how many transactions have been processed, and so on.
+RTView enables developers, testers, and general users who are running nodes connected to the real cluster to see what is going on, and how the nodes are performing. It gives visibility on: how much memory and CPU is being used, the state of the blockchain, how many blocks have been forged by a particular node, how many transactions have been processed, and so on.
 
 It is a cross-platform tool compatible with Windows, Linux, and macOS, and has a web-based user interface so you can use any browser that you want.
 
-The main benefit of RTView is simplicity. It is simple to install, technically there is no installation, you just unpack an archive and run an executable. It is also simple to configure as it provides an interactive dialog for its configuration and shows particular changes the user should make in the node configuration files. It is also simple to view with any browser.
+The main benefit of RTView is simplicity. It is simple to use; technically there is no installation, you just unpack an archive and run an executable. It is also simple to configure through an interactive dialog and shows particular changes the user should make in the node configuration files. It is also simple to view with any browser.
 
-RTView replaces the LiveView-mode feature in Cardano node and solves any previous LiveView limitations. Following the next release, LiveView will be removed from the node which will make the node much simpler and lighter, in terms of dependencies.
+RTView replaces the LiveView-mode feature in [Cardano node]( https://docs.cardano.org/cardano-components/cardano-node) and solves any previous LiveView limitations. Following the next release, LiveView will be removed from the node which will make the node much simpler and lighter, in terms of dependencies.
 
 ### How to set up RTView
 
-To set up RTView follow the [installation steps](https://github.com/input-output-hk/cardano-rt-view/blob/master/doc/getting-started/install.md/) to download, unpack, and run the tool. After you have completed these steps, RTView will be launched and ready to use.
+To set up RTView follow the [installation steps](https://github.com/input-output-hk/cardano-rt-view/blob/master/doc/getting-started/install.md/) to download, unpack, and run the tool. After you have completed these steps, RTView will launch.
