--- a/content/06-cardano-components/10-cardano-serialization-lib.mdx
+++ b/content/06-cardano-components/10-cardano-serialization-lib.mdx
@@ -13,7 +13,7 @@ Due to the portability of [Rust](https://www.rust-lang.org/), you can bind to th
 
 ### Benefits of using this library
 
-Serialization/deserialization code is automatically generated from Cardano’s official specification, which guarantees it can easily stay up to date. This is enabled due to the use of an EMURGO-written tool called [cddl-codegen](https://github.com/Emurgo/cddl-codegen), which can be re-used for other tasks such as the automatic generation of a Rust library for Cardano metadata specifications.
+Serialization/deserialization code is automatically generated from Cardano’s official specification, which guarantees it can easily stay up to date. This is enabled due to the use of an EMURGO-written tool called [cddl-codegen](https://github.com/Emurgo/cddl-codegen), which can be re-used for other tasks such as the automatic generation of a Rust library for Cardano [metadata](https://docs.cardano.org/glossary#metadata) specifications.
 
 It is also easy to create scripts in Rust or WASM to share with stake pools, or even embed inside an online tool. The library is powerful and flexible enough to be used to power wallets and exchanges.
 
