--- a/content/09-rosetta/01-learn-rosetta.mdx
+++ b/content/09-rosetta/01-learn-rosetta.mdx
@@ -5,7 +5,7 @@ metaTitle: Learn about Rosetta
 
 Rosetta is an open source specification and set of tools that help you to integrate with blockchains. Serving as a general-purpose integration framework, Rosetta provides a high-level interface that can be customized to work with any chain. The goal of Rosetta is to make the integration process easier, faster, and more reliable so that you can build once and integrate your blockchain everywhere.
 
-We have created our unique `cardano-rosetta` implementation to simplify the process of integration with Cardano. To put this into context and illustrate the different implementations of Rosetta, bitcoin-rosetta and ethereum-rosetta also exist. The commonality between all implementations is that they all share the same interface.
+We have created our unique `cardano-rosetta` implementation to simplify the process of integration with [Cardano](https://cardano.org/). To put this into context and illustrate the different implementations of Rosetta, bitcoin-rosetta and ethereum-rosetta also exist. The commonality between all implementations is that they all share the same interface.
 
 The rationale for integrating with Rosetta is that a single interface can interact seamlessly with all the blockchains that have implemented that interface. This is particularly useful for exchanges, for instance, since they can interact with the Cardano chain using the same interface that they might already be using to interact with other chains (Bitcoin, for example.) [Blockchain-specific operations](https://www.rosetta-api.org/docs/1.4.4/models/Operation.html) are interpreted to support the various chain implementations. 
 
