--- a/content/11-community/04-community-content.mdx
+++ b/content/11-community/04-community-content.mdx
@@ -3,9 +3,9 @@ title: Community content
 metaTitle: Community content
 ---
 
-Community collaboration is central to the success of Cardano. This page provides
+Community collaboration is central to [Cardano's](https://github.com/input-output-hk/cardano-documentation/pull/162) success. This page provides
 some community-generated content that we have gathered and deemed complementary
-to the content we are producing. As these materials were not produced by IOHK,
+to the content we are producing. As these materials were *not* produced by IOHK,
 we cannot verify that their content is fully accurate or completely up-to-date.
 
 * [CoinCashew Guide: How to build a Cardano Stake Pool](https://www.coincashew.com/coins/overview-ada/guide-how-to-build-a-haskell-stakepool-node)
