--- a/content/11-community/05-getting-support.mdx
+++ b/content/11-community/05-getting-support.mdx
@@ -3,18 +3,18 @@ title: Getting Support
 metaTitle: Getting Support
 ---
 
-Your feedback is important because it helps us improve Cardano. We have an
+Your feedback is important because it helps us improve [Cardano](https://github.com/input-output-hk/cardano-documentation/pull/163). We have an
 active Telegram channel and a dedicated
 [support page](https://iohk.zendesk.com/) to help you with your issues and
 questions.
 
 We are also creating documentation with the support of our pioneers, a small
-group of stake pool operators. As that documentation is completed, we will add
+group of [stake pool](https://docs.cardano.org/core-concepts/stake-pools) operators. As that documentation is completed, we will add
 it to the sections on this website. Please remember to check back regularly.
 
 # Telegram Channel: Cardano Developers
 
-You can reach the developers in Cardano community using links below:
+You can reach the developers in the Cardano community using these:
 - [Cardano Forums](https://forum.cardano.org/c/developers/)
 - [Stack Exchange](https://cardano.stackexchange.com/)
 - Telegram:
