--- a/content/10-plutus/01-learn-about-plutus.mdx
+++ b/content/10-plutus/01-learn-about-plutus.mdx
@@ -3,7 +3,7 @@ title: Learn about Plutus
 metaTitle: Learn about Plutus
 ---
 
-# Learn about Plutus?
+# Learn about Plutus
 
 Plutus is the native smart contract language for Cardano. It is a Turing-complete language written in Haskell, and Plutus smart contracts are effectively Haskell programs. By using Plutus, you can be confident in the correct execution of your smart contracts. It draws from modern language research to provide a safe, full-stack programming environment based on Haskell, the leading purely-functional programming language.
 
